--- a/data_models.ipynb
+++ b/data_models.ipynb
@@ -566,7 +566,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Implementing logistic regression model"
+    "## Stage 4: Use of Statistical Methods\n",
+    "#### Implementing logistic regression model"
    ]
   },
   {
@@ -728,7 +729,7 @@
    "metadata": {},
    "source": [
     "## Summary of Stage 4 so far: (still in progress)\n",
-    "- For this stage, I have built a few machine learning models, but I have not yet summarized my results. \n",
+    "- For this stage, I have built a logistic regression model after representing popularity as a binary indicator, but I have not yet summarized my results. \n",
     "## Next Steps:\n",
     "- I will look at the results from these models and analyze them, and summarize some important results. This would help me come up with ways to improve my models and optimize the results. "
    ]
